eclipse-workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
09:07:13 **** Build of configuration Debug for project vlc-sec ****
make all 
Building file: ../test/src/misc/variables.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test/src/misc/variables.d" -MT"test/src/misc/variables.d" -o "test/src/misc/variables.o" "../test/src/misc/variables.c"
In file included from ../test/src/misc/variables.c:26:0:
../test/src/misc/../../libvlc/test.h:64:43: error: ‘SRCDIR’ undeclared here (not in a function)
 static const char test_default_sample[] = SRCDIR"/samples/empty.voc";
                                           ^
../test/src/misc/../../libvlc/test.h:64:49: error: expected ‘,’ or ‘;’ before string constant
 static const char test_default_sample[] = SRCDIR"/samples/empty.voc";
                                                 ^
../test/src/misc/variables.c:27:36: fatal error: ../lib/libvlc_internal.h: No such file or directory
 #include "../lib/libvlc_internal.h"
                                    ^
compilation terminated.
make: *** [test/src/misc/variables.o] Error 1
09:07:56 **** Build of configuration Debug for project vlc ****
make all 
make: Nothing to be done for `all'.
09:08:08 **** Incremental Build of configuration Debug for project vlc-sec ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o modules/video_chroma/swscale.o ../modules/video_chroma/swscale.c 
../modules/video_chroma/swscale.c:33:24: fatal error: vlc_common.h: No such file or directory
 #include <vlc_common.h>
                        ^
compilation terminated.
09:10:39 **** Incremental Build of configuration Debug for project vlc ****
make all 
make: Nothing to be done for `all'.
09:10:45 **** Incremental Build of configuration Debug for project vlc-sec ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o src/video_output/window.o ../src/video_output/window.c 
../src/video_output/window.c:32:24: fatal error: vlc_common.h: No such file or directory
 #include <vlc_common.h>
                        ^
compilation terminated.
09:11:45 **** Incremental Build of configuration Debug for project vlc ****
make all 
make: Nothing to be done for `all'.
09:11:48 **** Incremental Build of configuration Release for project vlc-sec ****
make all 
Building file: ../test/src/misc/variables.c
Invoking: GCC C Compiler
gcc -O3 -Wall -c -fmessage-length=0 -MMD -MP -MF"test/src/misc/variables.d" -MT"test/src/misc/variables.d" -o "test/src/misc/variables.o" "../test/src/misc/variables.c"
In file included from ../test/src/misc/variables.c:26:0:
../test/src/misc/../../libvlc/test.h:64:43: error: ‘SRCDIR’ undeclared here (not in a function)
 static const char test_default_sample[] = SRCDIR"/samples/empty.voc";
                                           ^
../test/src/misc/../../libvlc/test.h:64:49: error: expected ‘,’ or ‘;’ before string constant
 static const char test_default_sample[] = SRCDIR"/samples/empty.voc";
                                                 ^
../test/src/misc/variables.c:27:36: fatal error: ../lib/libvlc_internal.h: No such file or directory
 #include "../lib/libvlc_internal.h"
                                    ^
compilation terminated.
make: *** [test/src/misc/variables.o] Error 1
